# masters_thesis_decoding

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: experiment.json
data/: data_loading.py  data_saving.py  masking.py
modeling/: train.py
testing/: permutation_test.py
